welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:3: error: not found: value abs
	if(abs(n % 100) <= 10)
           ^