welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
	var isNearHundred = false;
	if(abs(n % 100) <= 10)
		{
			isNearHundred = true;
		}

		return isNearHundred;
	}
